fixed some white space

--- a/site/public/css/electronic.css
+++ b/site/public/css/electronic.css
@@ -66,10 +66,6 @@ aside {
     display: none;
 }
 
-.navigation-box.smaller-navbar #grading-panel-student-name {
-    color: black;
-}
-
 .navigation-box.smaller-navbar .progress-value {
     position: unset;
     display: block;
